--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Civil engineering -- Periodicals'
 - !lcc 'TA'
 - !lcsh 'Railroad tunnels -- Design and construction'
+- GITenberg
 title: 'Transactions of the American Society of Civil Engineers, Vol. LXVIII, Sept.
   1910
 
